Fixes #321
 * Fix an issue that causes tall menus to be truncated horizontally.


git-svn-id: http://svn.arantius.com@575 28f79fa8-d1f5-0310-81f3-f5ca3e6eca6b

--- a/extension/tinymenu/skin/tinymenu-overlay.css
+++ b/extension/tinymenu/skin/tinymenu-overlay.css
@@ -1,4 +1,4 @@
-menu image {
+menu.menu-iconic > image {
 	max-height: 64px;
 	max-width: 64px;
 }
